syntax = "proto3";
package pbfiles;
option go_package = ".;pbfiles";
//引入时间搓proto
import "google/protobuf/timestamp.proto";

//主订单
message OrderMain{
 int32  order_id = 1;
 string order_no = 2;
 int32  user_id = 3;
 float  order_money = 4;
 google.protobuf.Timestamp order_time = 5;
};

